[20231009][Kotlin] 링크 수정

--- a/Kotlin/변수와_타입.md
+++ b/Kotlin/변수와_타입.md
@@ -21,7 +21,7 @@ var number2 = 1_000L
 
 코틀린에서의 primitive type 과 reference type
 - 코틀린은 숫자, 문자, 불리언 같은 몇몇 타입에 대해 연산시에는 알아서 Primitive Type으로 변환하여 연산해주어서 Boxing, Unboxing에 대한 오버헤드를 고려하지 않아도 된다.
-- [[코틀린에서의 Wrapper Type]]
+- [코틀린에서의 Wrapper Type](./코틀린에서의_Wrapper_Type.md)
 
 ## nullable 변수 
 Java에서 `Long` 과 같은 reference type은 null이 들어갈 수 있다.
@@ -156,6 +156,22 @@ val number2 = 3L // Long
 val number3 = 3.0f // Float
 val number4 = 3.0 // Double
 ```
+
+자바는 더 큰 Type으로 암시적인 Type Casting이 가능했지만, 코틀린에서는 무조건 명시적인 Type Casting이 필요하다.
+```kotlin
+val number1: Int = 4
+val number2: Long = number1.toLong()
+```
+
+위와 같이 `to타입()` 으로 변환해줘야 한다.
+
+```kotlin
+val number1: Int? = 4
+val number2: Long = number1?.toLong() ?: 0
+```
+
+nullable인 경우에는 위와 같은 처리를 해줘야 한다.
+
 
 ## 타입 캐스팅
 ## Kotlin만의 3가지 타입
