--- a/Kotlin/변수와_타입.md
+++ b/Kotlin/변수와_타입.md
@@ -174,5 +174,182 @@ nullable인 경우에는 위와 같은 처리를 해줘야 한다.
 
 
 ## 타입 캐스팅
+```java
+public static void printAgeIfPerson(Object obj){
+	if(obj instanceof Person){
+		Person person = (Person) obj;
+		System.out.println(person.getAge());
+	}
+}
+```
+
+위와 같이 Object -> Person 으로 캐스팅하는 자바 클래스를 코틀린으로 작성하면 아래와 같다.
+
+```kotlin
+fun printAgeIfPerson(obj: Any) {
+	if(obj is Person){
+		val person = obj as Person
+		println(person.age)
+	}
+}
+```
+
+코틀린에서는 타입 비교를 `is`로 하고  `as` 키워드를 사용하여 타입을 캐스팅한다.
+여기서는 if로 검사를 했지만, 타입 검사 없이 **Person으로 캐스팅하는데 캐스팅 할 수 없는 경우는 ClassCastException**이 발생한다.
+
+```kotlin
+fun printAgeIfPerson(obj: Any) {
+	if(obj is Person){
+		println(obj.age)
+	}
+}
+```
+
+### 스마트 캐스트
+코틀린은 **스마트 캐스트** 를 지원하기 때문에 이미 if문에서 타입 검사를 했으므로 obj를 Person 타입으로 간주해주어서 캐스팅을 생략할 수 있다.
+
+instanceof의 반대, 즉 이 변수가 어떤 타입이 아님을 검사할때는`!is` 를 사용할 수 있다.
+```kotlin
+if(obj !is Person){}
+```
+
+### nullable 타입에 대한 타입캐스팅
+```kotlin
+fun printAgeIfPerson(obj: Any?) {
+	val person = obj as? Person // person은 Person? 타입
+	println(person?.age) // null이면 null 출력
+}
+```
+nullable 타입인 Any? 가 들어올때는 `as?` 로 null check가 가능하다.
+또한, **Person 타입으로 캐스팅할 수 없는 경우도 결과가 null**이 된다.
+
+
 ## Kotlin만의 3가지 타입
-## String Interpolation, String Indexing
+### Any
+- 자바에서의 `Object` 클래스와 비슷하다. (비슷하다고 한 이유는 Kotlin은 Primitive Type의 최상위 타입도 `Any`임)
+- null을 포함할 수 없다. `Any?` 로 사용해야 한다.
+- equals, hashCode, toString을 포함한다.
+
+### Unit
+- 자바에서의 `void`
+- `void`와 다르게 코틀린의 `Unit`은 타입 인자(제네릭) 로 사용가능하다.
+
+### Nothing
+- 함수가 정상적으로 끝나지 않는다는 사실을 표현한다.
+- 무조건 예외를 반환하는 함수, 무한 루프 함수 등에 명시적으로 반환값이 없다는 것을 나타낸다
+```kotlin
+fun fail(message: String): Nothing {
+	throw IllegalArgumentException(message)
+}
+```
+
+## String Interpolation
+```kotlin
+val person = Person("Danny", 29)
+val log = "이름은 ${person.name}이고 나이는 ${person.age}세 입니다."
+```
+`${변수}` 로 String Interpolation을 사용할 수 있다.
+
+```kotlin
+val name = "Danny"
+
+val str = """
+	A
+	B
+	C
+""".trimIndent()
+```
+위와 같이 여러줄의 스트링을 작성할 수 있다.
+
+## String Indexing
+```kotlin
+val str = "ABC"
+println(str[0]) // A 출력
+```
+Java의 chatAt()을 사용할 필요 없이 Index로 char에 접근할 수 있다.
+
+# 코틀린의 연산자
+
+기본적인 연산자들은 자바와 거의 동일하다.
+
+자바에서 객체간의 비교는 compareTo()를 구현하여 하지만 코틀린에서는 비교연산자를 사용하면 compareTo()를 자동으로 호출해 준다.
+
+```java
+public class Money implements Comaparable<Money> {
+	private final long amount;
+
+	public Money(long amount){
+		this.amount = amount;
+	}
+
+	@Override
+	public int compareTo(@NotNull Money m){
+		return Long.compare(this.amount, m.amount);
+	}
+}
+```
+
+코틀린에서는 비교 연산자 사용시 자동으로 compareTo()를 호출해 준다.
+```kotlin
+val money1 = Money(2_000L)
+val money2 = Money(1_000L)
+
+if (money1 > money2)
+	println("Money1이 더 큽니다")
+```
+
+
+```java
+Money money1 = new Money(2_000L);
+Money money2 = new Money(1_000L);
+
+if (money1.compareTo(money2) > 0)
+	System.out.println("Money1이 더 큽니다");
+```
+Decompile시 위와 같이 된다. 
+
+## 동등성, 동일성
+동등성 : 두 객체의 값이 같은가 ? 
+동일성 : 두 객체가 완전히 동일한 객체인가? 주소가 같은가 ?
+
+자바에서는 객체 비교 시 (주소) `==`를 사용하고 값의 동등성 비교시 `==` 을 사용한다.
+코틀린에서는 객체 비교 시 (주소) `===` 을 사용하고 값 비교시 `==` 을 사용하면 알아서 equals()를 호출해준다.
+
+```kotlin
+val money1 = Money(1_000L)
+val money2 = money1
+val money3 = Money(1_000L)
+
+println(money1 === money2) // True (주소 비교)
+println(money1 == money3) // True (값 1_000L 비교)
+```
+
+## 코틀린만의 연산자
+- `in` `!in`
+	- Collection이나 범위 내에 포함 되는지, 아닌지 확인
+- `a..b`
+	- a부터 b까지 범위 객체 생성
+
+## 연산자 오버로딩
+
+코틀린에서는 객체마다 연산자를 오버로딩하여 구현할 수 있다.
+
+```kotlin
+data class Money (
+	val amount: Long
+) {
+	operator fun plus(other: Money): Money {
+		return Money(this.amount + other.amount)
+	}
+}
+```
+
+위와같이 operator를 overloading 하면 아래와 같이 바로 연산자로 사용 가능하다.
+
+```kotlin
+val money1 = Money(1_000L)
+val money2 = Money(2_000L)
+
+println(money1 + money2) // 오버로딩된 plus() 호출
+```
+
