[20231107][Kotlin] 번외 추가

--- a/Kotlin/변수와_타입.md
+++ b/Kotlin/변수와_타입.md
@@ -21,7 +21,7 @@ var number2 = 1_000L
 
 코틀린에서의 primitive type 과 reference type
 - 코틀린은 숫자, 문자, 불리언 같은 몇몇 타입에 대해 연산시에는 알아서 Primitive Type으로 변환하여 연산해주어서 Boxing, Unboxing에 대한 오버헤드를 고려하지 않아도 된다.
-- [코틀린에서의 Wrapper Type](./코틀린에서의_Wrapper_Type.md)
+- [코틀린에서의 Wrapper Type](코틀린에서의_Wrapper_Type.md)
 
 ## nullable 변수 
 Java에서 `Long` 과 같은 reference type은 null이 들어갈 수 있다.
